<resources>
    <string name="app_name">Book Station</string>
    <string name="title_activity_lecturas">Lecturas</string>
    <string name="action_settings">Settings</string>
    <string name="action_filtrar">Filtrar</string>
    <string name="action_favoritos">Favoritos</string>
    <string name="action_addLibro">Añadir libro</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_cuenta">Cuenta</string>

    <!-- strings botones de layouts de sesion -->
    <string name="bt_iniciar_sesion">Iniciar sesión</string>
    <string name="bt_registrarse">Registrarse</string>
    <string name="bt_olvidar_contra">¿Has olvidado tu contraseña?</string>
    <string name="bt_login_redirect">¿Tienes una cuenta? Inicia sesion</string>
    <string name="bt_register_redirect">¿No tienes cuenta? Registrate</string>
    <string name="logo">LOGO</string>

    <!-- menu botones -->
    <string name="text_leidos">Leidos</string>
    <string name="text_no_leidos">Leyendo</string>
    <string name="text_want_to_read">Por leer</string>

    <!-- hints -->
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="title">Título</string>
    <string name="autor">Autor</string>
    <string name="fecha_ini">Fecha inicio</string>
    <string name="fecha_fin">Fecha fin</string>
    <string name="formato_fecha">aaaa/mm/dd</string>
    <string name="resume">Resumen:</string>

    <!-- Errores -->
    <string name="user_vacio">Debe introducir un nombre de usuario</string>
    <string name="email_vacio">Debe introducir una dirección de email</string>
    <string name="password_vacia">Debe introducir la contraseña</string>
    <string name="password_caracteres">Debe introducir al menos 6 caracteres</string>
    <string name="error_restablecer">Su correo no está dado de alta en la aplicación</string>

    <!-- Radio Buttons -->
    <string name="rb_leido">Leido</string>
    <string name="rb_no_leido">Leyendo</string>
    <string name="rb_want_to_read">Por leer</string>

    <string name="choose_image">Seleccionar imagen</string>
    <string name="cadena_vacia"></string>

    <!-- Mensajes de help para textInputLayout -->
    <string name="help">*Requerido</string>
    <string name="error">*No puede estar vacío</string>

    <string name="restablecer">Restablecer contraseña</string>
    <string name="correo_enviado_restablecer">Revise su dirección de correo electrónico para restablecer la contraseña</string>
    <string name="btBuscar">Buscar</string>
    <string name="tvEstado">Estado</string>
    <string name="tvAutores">Autores</string>
    <string name="opcion_eliminar">Eliminar</string>
    <string name="checkBox">Mantener la sesión iniciada</string>
    <string name="escoge_contacto">Escoge contacto</string>

    <!-- Toolbar -->
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="compartir">Compartir</string>
    <string name="imprimir">Imprimir</string>
    <string name="borrar">Borrar</string>

    <string name="logout">Cerrar sesión</string>

    <!-- Help -->
    <string name="help_activity">
    "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
        printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.

Where does it come from?

Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source."
    </string>
    <string name="ayuda_titulo">  Ayuda  </string>

</resources>
